--- a/src/components/CowinDashboard/index.css
+++ b/src/components/CowinDashboard/index.css
@@ -1,60 +1,71 @@
-/* Write your CSS here */
-.bg-container {
-  background-color: #161625;
-  min-height: 100vh;
+.app-container {
   display: flex;
   justify-content: center;
+  background-color: #161625;
+  min-height: 100vh;
 }
 
-.responsive-container {
-  width: 90%;
-  max-width: 1100px;
+.cowin-dashboard-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 80%;
+  max-width: 1110px;
 }
 
-.header-container {
+.logo-container {
   display: flex;
   align-items: center;
-  margin-top: 35px;
+  margin-top: 20px;
 }
 
-.website-logo {
-  width: 70px;
-  height: 70px;
-  margin-right: 20px;
+.logo {
+  width: 50px;
+  height: 50px;
 }
 
-.website-name {
+.logo-heading {
   color: #2cc6c6;
-  font-weight: bold;
   font-family: 'Roboto';
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 1.5;
+  margin-left: 10px;
 }
 
 .heading {
   color: #cbd5e1;
-  font-size: 30px;
-  font-weight: bold;
   font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 1.5;
 }
 
-.loader-container {
+.loading-view {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
+}
+
+.failure-view {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.chart-container {
-  width: 95%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background-color: #1c1c2b;
-  margin-bottom: 25px;
-  border-radius: 10px;
-  padding: 15px;
+.failure-image {
+  width: 50%;
+  margin: 10px;
 }
 
-.chart-heading {
-  color: #6c757d;
+.failure-text {
+  color: #ffffff;
+  font-family: 'Bree Serif';
   font-size: 25px;
-  font-family: 'Roboto';
+  line-height: 1.4;
+  text-align: center;
 }
