--- a/src/components/VaccinationCoverage/index.css
+++ b/src/components/VaccinationCoverage/index.css
@@ -1,8 +1,15 @@
-/* Write your CSS here */
-.bg-container {
+.vaccination-by-coverage-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   background-color: #1c1c2b;
+  margin-bottom: 20px;
+  padding: 20px;
+}
+
+.vaccination-by-coverage-heading {
+  color: #94a3b8;
+  font-family: 'Roboto';
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 1.5;
 }
